Fix UUID, deleted cards from logic
